new button reset style

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,15 @@ body {
     opacity: 1;
 }
 
+.reset {
+    font-size: 32px;
+    padding: 8px 16px;
+    border-radius: 16px;
+    border: 1px black solid;
+    background-color: red;
+    cursor: pointer;
+}
+
 @media (max-width: 672px) {
     .card {
         height: 100px;
